# cpp_projects

./: .gitignore  CMakeLists.txt  Enemy.cpp  Enemy.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameWindow.cpp  GameWindow.h  Item.cpp  Item.h  LevelLoader.cpp  LevelLoader.h  PlatformTile.cpp  PlatformTile.h  Player.cpp  Player.h  README.md  main.cpp  print_tuple.cpp  print_tuple.h  scv_parsing.cpp  scv_parsing.h  utils.cpp  utils.h
lab0/: CMakeLists.txt  DataHandling.cpp  DataHandling.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h  main.cpp
lab1/: CMakeLists.txt  bitarray.cpp  bitarray.h  bitarray_test.cpp  main.cpp
